# zenoh_performance_tests

./: .gitignore  Cargo.toml  README.md  analyze_baseline.py  analyze_rb.py  build.sh  build_pub_sub_worker.sh  build_rb_worker.sh  plot_results.py  pyproject.toml  requirements.txt  rust-toolchain.toml
baseline/exp_logs/zenoh-2-1/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-2-2/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-2-3/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-2-4/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-2-5/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-2-6/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-3-1/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-3-2/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-3-3/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-3-4/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-3-5/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs/zenoh-3-6/log_exp_2022-05-09-20:07:32/: log_exp_2022-05-09-20:07:32.txt
baseline/exp_logs_05-10-16-57/zenoh-2-1/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
baseline/exp_logs_05-10-16-57/zenoh-2-2/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
baseline/exp_logs_05-10-16-57/zenoh-2-3/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
baseline/exp_logs_05-10-16-57/zenoh-2-4/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
baseline/exp_logs_05-10-16-57/zenoh-2-5/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
baseline/exp_logs_05-10-16-57/zenoh-2-6/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
baseline/exp_logs_05-10-16-57/zenoh-3-1/log_exp_2022-05-10-16:57:57/: log_exp_2022-05-10-16:57:57.txt
docs/: rpi_setup.md
exp_script/: Makefile  build.sh  plot_results.py  plot_results.sh
output-config/: Cargo.toml
output-config/src/: common.rs  lib.rs
pub-sub-worker/: Cargo.toml
pub-sub-worker/src/: common.rs  main.rs  utils.rs  workers.rs
rb_bench_script/: 00_config.sh  02_deploy_files.sh  04_run_zenohd.sh  05_kill_zenohd.sh  06_run_test.sh  README.md  clean_remote.sh  cross_build_rust_bin.sh  deploy_files.sh  kill_remote.sh  kill_zenohd.sh  parse_debug_log.py  parse_exps_payload_ind_tl.py  parse_exps_peers.py  peer_rb_sleepuntil.py  rpi_addrs.txt  run.sh  run_many.sh  run_rb_test.sh  sess_test_peer_num_ind.py  test_payload_ind_sleepuntil.py  test_payload_rb_sleepuntil.py  test_peer_num.py
rb_bench_script/arm-server/: build_rust_bin.sh  clean_remote.sh  plot_results.py  rate_limit.sh  run.sh  run_many.sh  sleep_until.py
rb_bench_script/arm-server/config/: command_args.template  command_args.template.medium  command_args.template.small  cyclonedds_io.json5  dds_io.json5  names.txt  zenoh_io.json5
rb_bench_script/arm-server/steps/: 00_config.sh  01_compile.sh  03_build_zenohd.sh  04_run_zenohd.sh  05_kill_zenohd.sh  06_run_test.sh
rb_bench_script/config/: command_args.template  params.txt  rpi_addrs.txt
rb_bench_script/rpi-farm/: cross_build_rust_bin.sh  plot_results.py  run.sh
rb_bench_script/rpi-farm/config/: command_args.template  params.txt  router_addr.txt  rpi_addrs.txt
rb_bench_script/rpi-farm/steps/: 01_compile.sh  02_deploy_files.sh  05_kill_zenohd.sh  06_run_test.sh  07_download_logs.sh
rb_bench_script/steps/: 00_config.sh  02_deploy_files.sh  03_build_zenohd.sh  04_run_zenohd.sh  05_kill_zenohd.sh  06_run_test.sh  07_download_logs.sh
reliable-broadcast/: Cargo.toml
reliable-broadcast-benchmark/: Cargo.toml
reliable-broadcast-benchmark/src/: common.rs  exp.rs  main.rs  msg.rs  run.sh  utils.rs
reliable-broadcast/examples/: config.json5  cyclonedds_io.json5  dds_io.json5  io.json5  rustdds_io.json5  simple.rs  zenoh_io.json5
reliable-broadcast/src/: common.rs  config.rs  lib.rs  message.rs  sender.rs  state.rs  stream.rs  worker.rs  zenoh_io.rs
reliable-broadcast/src/io/: mod.rs
reliable-broadcast/src/io/cyclonedds/: config.rs  receiver.rs  sample.rs  sender.rs
reliable-broadcast/src/io/dds/: config.rs  global.rs  mod.rs  receiver.rs  sample.rs  sender.rs
reliable-broadcast/src/io/generic/: mod.rs  receiver.rs  sample.rs  sender.rs
reliable-broadcast/src/io/rustdds/: config.rs  mod.rs  receiver.rs  sender.rs
reliable-broadcast/src/io/zenoh/: receiver.rs  sender.rs
reliable-broadcast/tests/: dds.rs  dds_many_to_many.json5  dds_one_to_many.json5  dds_one_to_one.json5
scripts/: activate-rpi-env.sh  build.sh  deploy_files.sh  exp_payload_list.txt  parse_exps_payload.py  parse_exps_peers_ind.py  parse_exps_peers_ind_tl.py  parse_log_ind.py  parse_sess_time.py  parse_time.py  peer_worker.py  rpi_addrs.txt  run_block.sh  run_concurrent.sh  run_concurrent_quiet.sh  sess_test_peer_num.py  sess_worker.py  test_peer_num_ind.py
session-test/: Cargo.toml
session-test-worker/: Cargo.toml
session-test-worker/src/: common.rs  main.rs
session-test/src/: common.rs  main.rs
src/: common.rs  main.rs  parse_all_exps_payload_ind_tl.py  parse_debug_log.py  parse_exps_init_time.py  parse_exps_payload.py  parse_exps_payload_ind_tl.py  parse_exps_peers.py  parse_exps_peers_ind.py  parse_exps_peers_ind_tl.py  parse_log_ind.py  parse_log_ind_peak_mem.py  parse_time.py  peer_worker.py  peer_worker_sleepuntil.py  sess_test_peer_num.py  sess_test_peer_num_ind.py  sess_worker.py  test_init_time.py  test_payload.py  test_payload_ind_sleepuntil.py  test_peer_num.py  test_peer_num_ind.py  test_peer_num_ind_sleepuntil.py  utils.rs  workers.rs
usage-parser/: Cargo.toml  README.md
usage-parser/src/: main.rs
zenoh_performance_tests/: Cargo.toml
zenoh_performance_tests/src/: common.rs  main.rs  workers.rs
(+5237 files in other folders)
