[package]
name = "zenoh_performance_tests"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "usage-parser",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.5.0-beta.9"
async-std = "1.9.0"
futures = "0.3.17"
derivative = "2.2.0"
serde = "1.0.131"
serde_json = "1.0.73"
anyhow = "1.0.51"
rayon = "1.5.1"
log = "0.4.14"
