[package]
name = "zenoh_performance_tests"
version = "0.1.3"
edition = "2021"

[workspace]

members = [
    "usage-parser",
    "session-test",
    "pub-sub-worker",
    "session-test-worker",
]
# exclude = [
    
# ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.6.0-dev.0"
# zenoh = {git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "f7309d6af9aa8c5c6e55e744fc68ea4f6f18e8e9"}

async-std = "1.10.0"
futures = "0.3.17"
derivative = "2.2.0"
serde = "1.0.131"
serde_json = "1.0.73"
anyhow = "1.0.51"
rayon = "1.5.1"
log = "0.4.14"
num_cpus = "1.13.1"
pretty_env_logger = "0.4.0"
tokio = "1.15.0"
flume = "0.10.9"
clap = {version = "3.1.6", features = [ "derive" ]}

[patch.crates-io]
zenoh = {git = "https://github.com/eurc17/zenoh.git", branch = "clique-peers"}
