[tool.poetry]
name = "zenoh_performance_tests"
version = "0.1.0"
description = ""
authors = ["eurc17 <50904241+eurc17@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
psrecord = "^1.2"
plotly = "^5.7.0"
kaleido = "==0.2.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
