[package]
name = "reliable-broadcast-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
collected = "0.4.0"
futures = "0.3.21"
itertools = "0.10.3"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
zenoh = "0.6.0-dev.0"
clap = "3.1.15"
reliable-broadcast = { version = "0.1.0", path = "../reliable-broadcast" }
rand = { version = "0.8.5", features = ["getrandom"] }
output-config = { version = "0.1.0", path = "../output-config" }
log = "0.4.17"
