[package]
name = "reliable-broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-std = "1.11.0"
blocking = "1.2.0"
collected = "0.4.0"
dashmap = "5.0.0"
derivative = "2.2.0"
flume = "0.10.9"
futures = "0.3.17"
guard = "0.5.1"
log = "0.4.14"
once_cell = "1.12.0"
ownref = "0.3.1"
pin-project = "1.0.10"
rustdds = "0.7.10"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
strum = { version = "0.24.0", features = ["derive"] }
uhlc = "0.4.0"
uuid = { version = "0.8.2", features = ["serde"] }
zenoh = "0.6.0-dev.0"
humantime-serde = "1.0.1"

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
itertools = "0.10.3"
json5 = "0.4.1"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde-loader = { version = "0.1.4", features = ["json5"] }
